[gd_scene load_steps=2 format=2]

[ext_resource path="res://Tools/PageChat.gd" type="Script" id=1]

[node name="PageChat" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="TitlePanel" type="PanelContainer" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitlePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="Thumbnail" type="TextureRect" parent="VBoxContainer/TitlePanel/HBoxContainer"]
margin_bottom = 24.0

[node name="Title" type="Label" parent="VBoxContainer/TitlePanel/HBoxContainer"]
margin_left = 4.0
margin_top = 5.0
margin_right = 458.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Test Title"

[node name="ToggleExtra" type="CheckBox" parent="VBoxContainer/TitlePanel/HBoxContainer"]
margin_left = 462.0
margin_right = 486.0
margin_bottom = 24.0

[node name="ExtraPanel" type="PanelContainer" parent="VBoxContainer"]
visible = false
margin_top = 38.0
margin_right = 500.0
margin_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ExtraPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 21.0

[node name="Avatar" type="TextureRect" parent="VBoxContainer/ExtraPanel/HBoxContainer"]
margin_bottom = 14.0

[node name="Creator" type="Label" parent="VBoxContainer/ExtraPanel/HBoxContainer"]
margin_left = 4.0
margin_right = 452.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Creator Name"

[node name="Label" type="Label" parent="VBoxContainer/ExtraPanel/HBoxContainer"]
margin_left = 456.0
margin_right = 486.0
margin_bottom = 14.0
text = "Date"
